@@ -1,5 +1,15 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.536 2006/01/27 15:04:07 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.537 2006/01/27 22:49:10 rocket Exp $
+
+  27 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  +livecd/cdtar/yaboot-1.3.11-ppc-cdtar.tar.bz2,
+  modules/generic_stage_target.py, targets/support/bootloader-setup.sh,
+  targets/support/create-iso.sh:
+  Fix ppc64 iso creation.  Add console machine_type for ppc yaboot separation.
+
+  27 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
+  Add ppc console and  machine_type=ibm
 
   27 Jan 2006; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
